Backport to 1.20.3-4 & JDK 17